# cpp-utils

./: CMakeLists.txt  Console.cpp  FileSystem.cpp  Functions.cpp  README.md
enums/: EPlatformType.h  ETrimType.h
headers/: Console.h  FileSystem.h  Functions.h  Namespace.h
interfaces/: IFileInfo.h
